--- a/site/01-foundations/index.html
+++ b/site/01-foundations/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" /><link rel="canonical" href="https://github.com/Ezylynn/ezylynn.github.io.git/01-foundations/" />
       <link rel="shortcut icon" href="../img/favicon.ico" />
     <title>Overview - WWIA</title>
     <link rel="stylesheet" href="../css/theme.css" />
@@ -14,7 +14,7 @@
         // Current page data
         var mkdocs_page_name = "Overview";
         var mkdocs_page_input_path = "01-foundations/index.md";
-        var mkdocs_page_url = null;
+        var mkdocs_page_url = "/Ezylynn/ezylynn.github.io.git/01-foundations/";
       </script>
     
     <!--[if lt IE 9]>
